--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.8.0"
+    "graphql": "^15.8.0",
+    "uuid": "^9.0.0"
   }
 }
