--- a/backend/blog/package.json
+++ b/backend/blog/package.json
@@ -13,8 +13,18 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/express": "^4.17.17",
+		"@types/node": "^20.4.2",
 		"concurrently": "^8.2.0",
 		"nodemon": "^3.0.1",
 		"typescript": "^5.1.6"
+	},
+	"dependencies": {
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"express-graphql": "^0.12.0",
+		"graphql": "^15.8.0",
+		"graphql-http": "^1.21.0",
+		"mongoose": "^7.3.4"
 	}
 }
